--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,5 @@ include settings.ini
 include LICENSE
 include CONTRIBUTING.md
 include README.md
+include extracao/arquivos/*
 recursive-exclude * __pycache__
