Finalizada extração dos dados do SMP Refatoração dos notebooks e organização dos arquivos fixos de dados em pastas internas do módulo extracao

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,5 +2,6 @@ include settings.ini
 include LICENSE
 include CONTRIBUTING.md
 include README.md
+include extracao/aero/arquivos/*
 include extracao/arquivos/*
 recursive-exclude * __pycache__
