--- a/settings.ini
+++ b/settings.ini
@@ -3,26 +3,26 @@ host = github
 lib_name = extracao
 user = ronaldokun
 description = This repository hold automation scripts to fetch, clean and merge data from licensed telecomunications entities available at ANATEL Database Systems.
-keywords = database sql mongodb pyodbc pandas nbdev rich fastcore geopy whylogs pandas-profiling tqdm
+keywords = sql mongo pandas 
 author = Ronaldo S.A. Batista
 author_email = rsilva@anatel.gov.br
 copyright = Ronaldo S.A. Batista
 branch = master
-version = 0.6.0
+version = 0.8.0
 min_python = 3.10
 audience = Developers
 language = English
 custom_sidebar = True
 license = apache2
 status = 3
-requirements = fastcore fastprogress pyodbc pymongo pandas>=2.0 aiohttp openpyxl pyarrow rich geopy tqdm xmltodict python-dotenv requests typer
-dev_requirements =  nbdev==2.2.10 ipykernel ipywidgets ydata-profiling black mypy 
+requirements = fastcore fastprogress pyodbc pymongo pandas>=2.0 aiohttp pyarrow rich geopy tqdm xmltodict python-dotenv requests typer
+dev_requirements = nbdev ipykernel ipywidgets ydata-profiling black ruff
 nbs_path = nbs
 doc_path = _docs
 recursive = False
-doc_host = https://ronaldokun.github.io/anateldb
+doc_host = https://InovaFiscaliza.github.io/EmissorasRF
 doc_baseurl = /
-git_url = https://github.com/ronaldokun/anateldb
+git_url = https://github.com/InovaFiscaliza/EmissorasRF
 lib_path = %(lib_name)s
 title = Estações Licenciadas de Telecomunicações e Radiodifusão
 black_formatting = True
