--- a/settings.ini
+++ b/settings.ini
@@ -15,7 +15,7 @@ language = English
 custom_sidebar = True
 license = apache2
 status = 3
-requirements = fastcore fastprogress pyodbc pymongo pandas>=2.0 aiohttp pyarrow rich geopy tqdm xmltodict python-dotenv requests typer
+requirements = fastcore fastprogress pyodbc pymongo pandas>=2.0 pyarrow rich geopy tqdm xmltodict python-dotenv requests typer
 dev_requirements = nbdev ipykernel ipywidgets ydata-profiling black ruff
 nbs_path = nbs
 doc_path = _docs
