--- a/settings.ini
+++ b/settings.ini
@@ -24,11 +24,10 @@ doc_host = https://InovaFiscaliza.github.io/EmissorasRF
 doc_baseurl = /
 git_url = https://github.com/InovaFiscaliza/EmissorasRF
 lib_path = %(lib_name)s
-title = Estações Licenciadas de Telecomunicações e Radiodifusão
+title = Telecomunicações e Radiodifusão
 black_formatting = True
 readme_nb = index.ipynb
 allowed_metadata_keys = 
 allowed_cell_metadata_keys = 
 jupyter_hooks = True
 clean_ids = True
-
