:bug: Removed black as dev_requirement because is blocking quarto workflow

--- a/settings.ini
+++ b/settings.ini
@@ -16,7 +16,7 @@ custom_sidebar = True
 license = apache2
 status = 3
 requirements = fastcore fastprogress pyodbc pymongo pandas pyarrow rich geopy tqdm xmltodict python-dotenv requests typer
-dev_requirements = nbdev ipykernel ipywidgets black ruff
+dev_requirements = nbdev ipykernel ipywidgets ruff
 nbs_path = nbs
 doc_path = _docs
 recursive = False
