:bug: Removed dev_requirements because is blocking quarto workflow

--- a/settings.ini
+++ b/settings.ini
@@ -16,7 +16,8 @@ custom_sidebar = True
 license = apache2
 status = 3
 requirements = fastcore fastprogress pyodbc pymongo pandas pyarrow rich geopy tqdm xmltodict python-dotenv requests typer
-dev_requirements = nbdev ipykernel ipywidgets ruff
+dev_requirements = nbdev 
+local_requirements = ipykernel ipywidgets black ruff
 nbs_path = nbs
 doc_path = _docs
 recursive = False
