--- a/settings.ini
+++ b/settings.ini
@@ -3,12 +3,12 @@ host = github
 lib_name = extracao
 user = ronaldokun
 description = This repository hold automation scripts to fetch, clean and merge data from licensed telecomunications entities available at ANATEL Database Systems.
-keywords = sql mongo pandas 
+keywords = sql mongo pandas
 author = Ronaldo S.A. Batista
 author_email = rsilva@anatel.gov.br
 copyright = Ronaldo S.A. Batista
 branch = master
-version = 0.8.1
+version = 0.8.4
 min_python = 3.10
 audience = Developers
 language = English
@@ -16,7 +16,7 @@ custom_sidebar = True
 license = apache2
 status = 3
 requirements = fastcore fastprogress pyodbc pymongo pandas pyarrow rich geopy tqdm xmltodict python-dotenv requests typer
-dev_requirements = nbdev 
+dev_requirements = nbdev
 local_requirements = ipykernel ipywidgets black ruff
 nbs_path = nbs
 doc_path = _docs
@@ -24,7 +24,7 @@ recursive = False
 doc_host = https://InovaFiscaliza.github.io/EmissorasRF
 doc_baseurl = /
 git_url = https://github.com/InovaFiscaliza/EmissorasRF
-lib_path = %(lib_name)s
+lib_path = extracao
 title = Telecomunicações e Radiodifusão
 black_formatting = True
 readme_nb = index.ipynb
@@ -32,3 +32,7 @@ allowed_metadata_keys =
 allowed_cell_metadata_keys = 
 jupyter_hooks = True
 clean_ids = True
+tst_flags = notest
+clear_all = False
+put_version_in_init = True
+
