--- a/settings.ini
+++ b/settings.ini
@@ -8,15 +8,15 @@ author = Ronaldo S.A. Batista
 author_email = rsilva@anatel.gov.br
 copyright = Ronaldo S.A. Batista
 branch = master
-version = 0.8.6
+version = 0.8.9
 min_python = 3.8
 audience = Developers
 language = English
 custom_sidebar = True
 license = apache2
 status = 3
-requirements = fastcore fastprogress pyodbc pymongo pandas pyarrow rich geopy tqdm xmltodict python-dotenv requests typer
-dev_requirements = nbdev
+requirements = fastcore fastprogress pyodbc pymongo pandas geopandas shapely pyarrow rich geopy tqdm xmltodict python-dotenv requests typer
+dev_requirements = nbdev filprofiler
 local_requirements = ipykernel ipywidgets black ruff
 nbs_path = nbs
 doc_path = _docs
