--- a/settings.ini
+++ b/settings.ini
@@ -3,7 +3,7 @@ host = github
 lib_name = extracao
 user = ronaldokun
 description = This repository hold automation scripts to fetch, clean and merge data from licensed telecomunications entities available at ANATEL Database Systems.
-keywords = sql mongo pandas
+keywords = sql mongo api pandas geopandas shapely geopy
 author = Ronaldo S.A. Batista
 author_email = rsilva@anatel.gov.br
 copyright = Ronaldo S.A. Batista
@@ -17,13 +17,13 @@ license = apache2
 status = 3
 requirements = fastcore fastprogress pyodbc pymongo pandas geopandas shapely pyarrow rich geopy tqdm xmltodict python-dotenv requests typer
 dev_requirements = nbdev filprofiler
-local_requirements = ipykernel ipywidgets black ruff
+local_requirements = ipykernel ipywidgets ruff
 nbs_path = nbs
 doc_path = _docs
 recursive = False
-doc_host = https://InovaFiscaliza.github.io/EmissorasRF
+doc_host = https://InovaFiscaliza.github.io/rfdatahub
 doc_baseurl = /
-git_url = https://github.com/InovaFiscaliza/EmissorasRF
+git_url = https://github.com/InovaFiscaliza/rfdatahub
 lib_path = extracao
 title = Telecomunicações e Radiodifusão
 black_formatting = True
