--- a/environment_ubuntu.yml
+++ b/environment_ubuntu.yml
@@ -1,232 +1,288 @@
-name: dados
+name: db
 channels:
-  - fastai
-  - conda-forge
-  - defaults
+- conda-forge
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
-  - aiohttp=3.8.5
-  - aiosignal=1.3.1
-  - anyio=3.7.1
-  - asttokens=2.2.1
-  - astunparse=1.6.3
-  - async-timeout=4.0.3
-  - attrs=23.1.0
-  - aws-c-auth=0.7.3
-  - aws-c-cal=0.6.1
-  - aws-c-common=0.9.0
-  - aws-c-compression=0.2.17
-  - aws-c-event-stream=0.3.1
-  - aws-c-http=0.7.11
-  - aws-c-io=0.13.32
-  - aws-c-mqtt=0.9.3
-  - aws-c-s3=0.3.14
-  - aws-c-sdkutils=0.1.12
-  - aws-checksums=0.1.17
-  - aws-crt-cpp=0.23.0
-  - aws-sdk-cpp=1.10.57
-  - backcall=0.2.0
-  - backports=1.0
-  - backports.functools_lru_cache=1.6.5
-  - black=23.7.0
-  - brotli=1.0.9
-  - brotli-bin=1.0.9
-  - brotli-python=1.0.9
-  - bzip2=1.0.8
-  - c-ares=1.19.1
-  - ca-certificates=2023.7.22
-  - certifi=2023.7.22
-  - cffi=1.15.1
-  - charset-normalizer=3.2.0
-  - click=8.1.7
-  - colorama=0.4.6
-  - comm=0.1.4
-  - contourpy=1.1.0
-  - cryptography=41.0.3
-  - cycler=0.11.0
-  - dacite=1.8.0
-  - dataclasses=0.8
-  - debugpy=1.6.8
-  - decorator=5.1.1
-  - dnspython=2.4.2
-  - exceptiongroup=1.1.3
-  - execnb=0.1.5
-  - executing=1.2.0
-  - fastcore=1.5.29
-  - fastprogress=1.0.3
-  - fonttools=4.42.1
-  - freetype=2.12.1
-  - frozenlist=1.4.0
-  - geographiclib=1.52
-  - geopy=2.3.0
-  - gflags=2.2.2
-  - ghapi=1.0.4
-  - glog=0.6.0
-  - h11=0.14.0
-  - h2=4.1.0
-  - hpack=4.0.0
-  - htmlmin=0.1.12
-  - httpcore=0.17.3
-  - hyperframe=6.0.1
-  - idna=3.4
-  - imagehash=4.3.1
-  - importlib-metadata=6.8.0
-  - importlib_metadata=6.8.0
-  - ipykernel=6.25.1
-  - ipython=8.14.0
-  - ipywidgets=8.1.0
-  - jedi=0.19.0
-  - jinja2=3.1.2
-  - joblib=1.3.2
-  - jupyter_client=8.3.0
-  - jupyter_core=5.3.1
-  - jupyterlab_widgets=3.0.8
-  - keyutils=1.6.1
-  - kiwisolver=1.4.4
-  - krb5=1.21.2
-  - lcms2=2.15
-  - ld_impl_linux-64=2.40
-  - lerc=4.0.0
-  - libabseil=20230125.3
-  - libarrow=12.0.1
-  - libblas=3.9.0
-  - libbrotlicommon=1.0.9
-  - libbrotlidec=1.0.9
-  - libbrotlienc=1.0.9
-  - libcblas=3.9.0
-  - libcrc32c=1.1.2
-  - libcurl=8.2.1
-  - libdeflate=1.18
-  - libedit=3.1.20221030
-  - libev=4.33
-  - libevent=2.1.12
-  - libexpat=2.5.0
-  - libffi=3.4.2
-  - libgcc-ng=13.1.0
-  - libgfortran-ng=13.1.0
-  - libgfortran5=13.1.0
-  - libgomp=13.1.0
-  - libgoogle-cloud=2.12.0
-  - libgrpc=1.56.2
-  - libiconv=1.17
-  - libjpeg-turbo=2.1.5.1
-  - liblapack=3.9.0
-  - libnghttp2=1.52.0
-  - libnsl=2.0.0
-  - libnuma=2.0.16
-  - libopenblas=0.3.23
-  - libpng=1.6.39
-  - libprotobuf=4.23.3
-  - libsodium=1.0.18
-  - libsqlite=3.42.0
-  - libssh2=1.11.0
-  - libstdcxx-ng=13.1.0
-  - libthrift=0.18.1
-  - libtiff=4.5.1
-  - libutf8proc=2.8.0
-  - libuuid=2.38.1
-  - libwebp-base=1.3.1
-  - libxcb=1.15
-  - libzlib=1.2.13
-  - lz4-c=1.9.4
-  - markdown-it-py=3.0.0
-  - markupsafe=2.1.3
-  - matplotlib-base=3.7.2
-  - matplotlib-inline=0.1.6
-  - mdurl=0.1.0
-  - multidict=6.0.4
-  - multimethod=1.4
-  - munkres=1.1.4
-  - mypy_extensions=1.0.0
-  - nbdev=2.3.12
-  - ncurses=6.4
-  - nest-asyncio=1.5.6
-  - networkx=3.1
-  - numpy=1.23.5
-  - openjpeg=2.5.0
-  - openssl=3.1.2
-  - orc=1.9.0
-  - packaging=23.1
-  - pandas=2.0.3
-  - parso=0.8.3
-  - pathspec=0.11.2
-  - patsy=0.5.3
-  - pexpect=4.8.0
-  - phik=0.12.3
-  - pickleshare=0.7.5
-  - pillow=10.0.0
-  - pip=23.2.1
-  - platformdirs=3.10.0
-  - pooch=1.7.0
-  - prompt-toolkit=3.0.39
-  - prompt_toolkit=3.0.39
-  - psutil=5.9.5
-  - pthread-stubs=0.4
-  - ptyprocess=0.7.0
-  - pure_eval=0.2.2
-  - pyarrow=12.0.1
-  - pybind11-abi=4
-  - pycparser=2.21
-  - pydantic=1.10.12
-  - pygments=2.16.1
-  - pymongo=4.4.1
-  - pyodbc=4.0.39
-  - pyparsing=3.0.9
-  - pysocks=1.7.1
-  - python=3.11.4
-  - python-dateutil=2.8.2
-  - python-dotenv=1.0.0
-  - python-tzdata=2023.3
-  - python_abi=3.11
-  - pytz=2023.3
-  - pywavelets=1.4.1
-  - pyyaml=6.0
-  - pyzmq=25.1.1
-  - rdma-core=28.9
-  - re2=2023.03.02
-  - readline=8.2
-  - requests=2.31.0
-  - rich=13.5.1
-  - ruff=0.0.285
-  - s2n=1.3.49
-  - scipy=1.10.1
-  - seaborn=0.12.2
-  - seaborn-base=0.12.2
-  - setuptools=68.1.2
-  - shellingham=1.5.3
-  - six=1.16.0
-  - snappy=1.1.10
-  - sniffio=1.3.0
-  - stack_data=0.6.2
-  - statsmodels=0.14.0
-  - tangled-up-in-unicode=0.2.0
-  - tk=8.6.12
-  - tornado=6.3.3
-  - tqdm=4.66.1
-  - traitlets=5.9.0
-  - typeguard=2.13.3
-  - typer=0.9.0
-  - typing-extensions=4.7.1
-  - typing_extensions=4.7.1
-  - tzdata=2023c
-  - ucx=1.14.1
-  - unixodbc=2.3.12
-  - urllib3=2.0.4
-  - visions=0.7.5
-  - watchdog=2.1.6
-  - wcwidth=0.2.6
-  - wheel=0.41.2
-  - widgetsnbextension=4.0.8
-  - wordcloud=1.9.2
-  - xmltodict=0.13.0
-  - xorg-libxau=1.0.11
-  - xorg-libxdmcp=1.1.3
-  - xz=5.2.6
-  - yaml=0.2.5
-  - yarl=1.9.2
-  - ydata-profiling=4.5.1
-  - zeromq=4.3.4
-  - zipp=3.16.2
-  - zstd=1.5.2
-prefix: /home/melinda/micromamba/envs/dados
+- _libgcc_mutex=0.1
+- _openmp_mutex=4.5
+- anyio=4.2.0
+- asttokens=2.4.1
+- astunparse=1.6.3
+- attrs=23.2.0
+- aws-c-auth=0.7.7
+- aws-c-cal=0.6.9
+- aws-c-common=0.9.8
+- aws-c-compression=0.2.17
+- aws-c-event-stream=0.3.2
+- aws-c-http=0.7.14
+- aws-c-io=0.13.36
+- aws-c-mqtt=0.9.10
+- aws-c-s3=0.4.1
+- aws-c-sdkutils=0.1.12
+- aws-checksums=0.1.17
+- aws-crt-cpp=0.24.7
+- aws-sdk-cpp=1.11.182
+- backcall=0.2.0
+- blosc=1.21.5
+- boost-cpp=1.78.0
+- branca=0.7.1
+- brotli=1.1.0
+- brotli-bin=1.1.0
+- brotli-python=1.1.0
+- bzip2=1.0.8
+- c-ares=1.26.0
+- ca-certificates=2024.2.2
+- cairo=1.16.0
+- certifi=2024.2.2
+- cffi=1.16.0
+- cfitsio=4.2.0
+- charset-normalizer=3.3.2
+- click=8.1.7
+- click-plugins=1.1.1
+- cligj=0.7.2
+- colorama=0.4.6
+- comm=0.2.1
+- contourpy=1.1.1
+- cryptography=41.0.7
+- curl=8.4.0
+- cycler=0.12.1
+- debugpy=1.8.0
+- decorator=5.1.1
+- dnspython=2.5.0
+- exceptiongroup=1.2.0
+- execnb=0.1.5
+- executing=2.0.1
+- expat=2.5.0
+- fastcore=1.5.29
+- fastprogress=1.0.3
+- fiona=1.9.4
+- folium=0.15.1
+- font-ttf-dejavu-sans-mono=2.37
+- font-ttf-inconsolata=3.000
+- font-ttf-source-code-pro=2.038
+- font-ttf-ubuntu=0.83
+- fontconfig=2.14.2
+- fonts-conda-ecosystem=1
+- fonts-conda-forge=1
+- fonttools=4.48.1
+- freetype=2.12.1
+- freexl=1.0.6
+- gdal=3.7.0
+- geographiclib=1.52
+- geopandas=0.13.2
+- geopandas-base=0.13.2
+- geopy=2.4.1
+- geos=3.11.2
+- geotiff=1.7.1
+- gettext=0.21.1
+- gflags=2.2.2
+- ghapi=1.0.4
+- giflib=5.2.1
+- glog=0.6.0
+- h11=0.14.0
+- h2=4.1.0
+- hdf4=4.2.15
+- hdf5=1.14.0
+- hpack=4.0.0
+- httpcore=1.0.2
+- hyperframe=6.0.1
+- icu=72.1
+- idna=3.6
+- importlib-metadata=7.0.1
+- importlib-resources=6.1.1
+- importlib_metadata=7.0.1
+- importlib_resources=6.1.1
+- ipykernel=6.29.2
+- ipython=8.12.2
+- ipywidgets=8.1.2
+- jedi=0.19.1
+- jinja2=3.1.3
+- joblib=1.3.2
+- json-c=0.16
+- jupyter_client=8.6.0
+- jupyter_core=5.7.1
+- jupyterlab_widgets=3.0.10
+- kealib=1.5.1
+- keyutils=1.6.1
+- kiwisolver=1.4.5
+- krb5=1.21.2
+- lcms2=2.15
+- ld_impl_linux-64=2.40
+- lerc=4.0.0
+- libabseil=20230802.1
+- libaec=1.1.2
+- libarchive=3.6.2
+- libarrow=14.0.1
+- libarrow-acero=14.0.1
+- libarrow-dataset=14.0.1
+- libarrow-flight=14.0.1
+- libarrow-flight-sql=14.0.1
+- libarrow-gandiva=14.0.1
+- libarrow-substrait=14.0.1
+- libblas=3.9.0
+- libbrotlicommon=1.1.0
+- libbrotlidec=1.1.0
+- libbrotlienc=1.1.0
+- libcblas=3.9.0
+- libcrc32c=1.1.2
+- libcurl=8.4.0
+- libdeflate=1.18
+- libedit=3.1.20191231
+- libev=4.33
+- libevent=2.1.12
+- libexpat=2.5.0
+- libffi=3.4.2
+- libgcc-ng=13.2.0
+- libgdal=3.7.0
+- libgfortran-ng=13.2.0
+- libgfortran5=13.2.0
+- libglib=2.78.1
+- libgomp=13.2.0
+- libgoogle-cloud=2.12.0
+- libgrpc=1.59.3
+- libiconv=1.17
+- libjpeg-turbo=2.1.5.1
+- libkml=1.3.0
+- liblapack=3.9.0
+- libllvm15=15.0.7
+- libnetcdf=4.9.2
+- libnghttp2=1.58.0
+- libnl=3.9.0
+- libnsl=2.0.1
+- libnuma=2.0.16
+- libopenblas=0.3.25
+- libparquet=14.0.1
+- libpng=1.6.42
+- libpq=15.4
+- libprotobuf=4.24.4
+- libre2-11=2023.06.02
+- librttopo=1.1.0
+- libsodium=1.0.18
+- libspatialindex=1.9.3
+- libspatialite=5.0.1
+- libsqlite=3.44.2
+- libssh2=1.11.0
+- libstdcxx-ng=13.2.0
+- libthrift=0.19.0
+- libtiff=4.5.1
+- libutf8proc=2.8.0
+- libuuid=2.38.1
+- libwebp-base=1.3.2
+- libxcb=1.15
+- libxml2=2.11.5
+- libzip=1.10.1
+- libzlib=1.2.13
+- lz4-c=1.9.4
+- lzo=2.10
+- mapclassify=2.5.0
+- markdown-it-py=3.0.0
+- markupsafe=2.1.5
+- matplotlib-base=3.7.3
+- matplotlib-inline=0.1.6
+- mdurl=0.1.2
+- munch=4.0.0
+- munkres=1.1.4
+- nbdev=2.2.10
+- ncurses=6.4
+- nest-asyncio=1.6.0
+- networkx=3.1
+- nspr=4.35
+- nss=3.97
+- numpy=1.24.4
+- openjpeg=2.5.0
+- openssl=3.1.5
+- orc=1.9.2
+- packaging=23.2
+- pandas=2.0.3
+- parso=0.8.3
+- pcre2=10.40
+- pexpect=4.9.0
+- pickleshare=0.7.5
+- pillow=10.0.0
+- pip=24.0
+- pixman=0.43.2
+- platformdirs=4.2.0
+- pooch=1.8.0
+- poppler=23.05.0
+- poppler-data=0.4.12
+- postgresql=15.4
+- proj=9.2.0
+- prompt-toolkit=3.0.42
+- prompt_toolkit=3.0.42
+- psutil=5.9.8
+- pthread-stubs=0.4
+- ptyprocess=0.7.0
+- pure_eval=0.2.2
+- pyarrow=14.0.1
+- pycparser=2.21
+- pygments=2.17.2
+- pymongo=4.6.1
+- pyodbc=5.1.0
+- pyparsing=3.1.1
+- pyproj=3.5.0
+- pysocks=1.7.1
+- python=3.8.18
+- python-dateutil=2.8.2
+- python-dotenv=1.0.1
+- python-tzdata=2023.4
+- python_abi=3.8
+- pytz=2024.1
+- pyyaml=6.0.1
+- pyzmq=25.1.2
+- rdma-core=50.0
+- re2=2023.06.02
+- readline=8.2
+- requests=2.31.0
+- rich=13.7.0
+- rtree=1.2.0
+- ruff=0.2.1
+- s2n=1.3.56
+- scikit-learn=1.3.2
+- scipy=1.10.1
+- setuptools=69.0.3
+- shapely=2.0.1
+- shellingham=1.5.4
+- six=1.16.0
+- snappy=1.1.10
+- sniffio=1.3.0
+- sqlite=3.44.2
+- stack_data=0.6.2
+- threadpoolctl=3.2.0
+- tiledb=2.13.2
+- tk=8.6.13
+- tornado=6.3.3
+- tqdm=4.66.1
+- traitlets=5.14.1
+- typer=0.9.0
+- typing-extensions=4.9.0
+- typing_extensions=4.9.0
+- tzcode=2024a
+- tzdata=2024a
+- ucx=1.15.0
+- unicodedata2=15.1.0
+- unixodbc=2.3.12
+- uriparser=0.9.7
+- urllib3=2.2.0
+- wcwidth=0.2.13
+- wheel=0.42.0
+- widgetsnbextension=4.0.10
+- xerces-c=3.2.4
+- xmltodict=0.13.0
+- xorg-kbproto=1.0.7
+- xorg-libice=1.1.1
+- xorg-libsm=1.2.4
+- xorg-libx11=1.8.7
+- xorg-libxau=1.0.11
+- xorg-libxdmcp=1.1.3
+- xorg-libxext=1.3.4
+- xorg-libxrender=0.9.11
+- xorg-renderproto=0.11.1
+- xorg-xextproto=7.3.0
+- xorg-xproto=7.0.31
+- xyzservices=2023.10.1
+- xz=5.2.6
+- yaml=0.2.5
+- zeromq=4.3.5
+- zipp=3.17.0
+- zlib=1.2.13
+- zstd=1.5.5
+
